//
//  ImageFeedUITests.swift
//  ImageFeedUITests
//
//  Created by olegg on 08.03.2026.
//

import XCTest

final class ImageFeedUITests: XCTestCase {
    private let app = XCUIApplication() // переменная приложения
    
    override func setUpWithError() throws {
        continueAfterFailure = false // настройка выполнения тестов, которая прекратит выполнения тестов, если в тесте что-то пошло не так
        
        app.launch() // запускаем приложение перед каждым тестом
    }
    
    func testAuth() throws {
        app.buttons["Authenticate"].tap()
        
        let webView = app.webViews["UnsplashWebView"]
        
        XCTAssertTrue(webView.waitForExistence(timeout: 10))
        
        let loginTextField = webView.descendants(matching: .textField).element
        XCTAssertTrue(loginTextField.waitForExistence(timeout: 10))
        
        loginTextField.tap()
        loginTextField.typeText("dobryi95@gmail.com")
        webView.swipeUp()
        hideKeyboard()
        let passwordTextField = webView.descendants(matching: .secureTextField).element
        XCTAssertTrue(passwordTextField.waitForExistence(timeout: 10))
        
        passwordTextField.tap()
        passwordTextField.typeText("qweqwe11")
        webView.swipeUp()
        hideKeyboard()
        webView.buttons["Login"].tap()
        
        let tablesQuery = app.tables
        let cell = tablesQuery.children(matching: .cell).element(boundBy: 0)
        
        XCTAssertTrue(cell.waitForExistence(timeout: 5))
    }
    func testFeed() throws {
        let tablesQuery = app.tables
        
        let cell = tablesQuery.children(matching: .cell).element(boundBy: 0)
        cell.swipeUp()
        
        sleep(2)
        
        let cellToLike = tablesQuery.children(matching: .cell).element(boundBy: 1)
        
        cellToLike.buttons["No Active"].tap()
        cellToLike.buttons["Active"].tap()
        
        sleep(2)
        
        cellToLike.tap()
        
        sleep(2)
        
        let image = app.scrollViews.images.element(boundBy: 0)
        // Zoom in
        image.pinch(withScale: 3, velocity: 1) // zoom in
        // Zoom out
        image.pinch(withScale: 0.5, velocity: -1)
        
        let navBackButtonWhiteButton = app.buttons["Backward"]
        navBackButtonWhiteButton.tap()
    }
    func testProfile() throws {
        sleep(5)
        app.tabBars.buttons.element(boundBy: 1).tap()
        
        XCTAssertTrue(app.staticTexts["Olegg"].exists)
        XCTAssertTrue(app.staticTexts["@olegg100"].exists)
        
        app.buttons["Exit"].tap()
        
        app.alerts["Пока, пока!"].scrollViews.otherElements.buttons["Да"].tap()
    }
    
    func hideKeyboard() {
        let app = XCUIApplication()
        let doneButton = app.buttons["Done"]
        let returnButton = app.buttons["Return"]
        let goButton = app.buttons["Go"]
        
        if doneButton.exists {
            doneButton.tap()
        } else if returnButton.exists {
            returnButton.tap()
        } else if goButton.exists {
            goButton.tap()
        } else {
            
            let webView = app.webViews["UnsplashWebView"]
            if webView.exists {
                webView.coordinate(withNormalizedOffset: CGVector(dx: 0.1, dy: 0.1)).tap()
            } else {
                
                app.swipeDown()
            }
        }
    }
}
